@@ -28,21 +28,23 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.MissingResourceException;
+import java.util.Observable;
 import java.util.ResourceBundle;
 import java.util.TreeSet;
+
+import javolution.lang.Reusable;
+import javolution.util.FastList;
+import javolution.util.FastMap;
 
 import org.ofbiz.base.crypto.HashCrypt;
 import org.ofbiz.base.util.Base64;
 import org.ofbiz.base.util.Debug;
 import org.ofbiz.base.util.GeneralException;
 import org.ofbiz.base.util.ObjectType;
-import org.ofbiz.base.util.Observable;
-import org.ofbiz.base.util.Observer;
 import org.ofbiz.base.util.TimeDuration;
 import org.ofbiz.base.util.UtilDateTime;
 import org.ofbiz.base.util.UtilGenerics;
@@ -51,13 +53,10 @@ import org.ofbiz.base.util.UtilValidate;
 import org.ofbiz.base.util.UtilXml;
 import org.ofbiz.base.util.collections.LocalizedMap;
 import org.ofbiz.entity.condition.EntityCondition;
-import org.ofbiz.entity.condition.EntityFieldMap;
 import org.ofbiz.entity.jdbc.SqlJdbcUtil;
 import org.ofbiz.entity.model.ModelEntity;
 import org.ofbiz.entity.model.ModelField;
 import org.ofbiz.entity.model.ModelFieldType;
-import org.ofbiz.entity.model.ModelKeyMap;
-import org.ofbiz.entity.model.ModelRelation;
 import org.ofbiz.entity.model.ModelViewEntity;
 import org.ofbiz.entity.model.ModelViewEntity.ModelAlias;
 import org.w3c.dom.Document;
@@ -67,30 +66,21 @@ import org.w3c.dom.Element;
  * <p>Note that this class extends <code>Observable</code> to achieve change notification for
  * <code>Observer</code>s. Whenever a field changes the name of the field will be passed to
  * the <code>notifyObservers()</code> method, and through that to the <code>update()</code> method of each
- * <code>Observer</code>.</p>
- * <p>This class is not thread-safe. If an instance of this class is shared between threads,
- * then it should be made immutable by calling the <code>setImmutable()</code> method.</p>
+ * <code>Observer</code>.
  *
  */
 @SuppressWarnings("serial")
-public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>, Serializable, Comparable<GenericEntity>, Cloneable {
+public class GenericEntity extends Observable implements Map<String, Object>, LocalizedMap<Object>, Serializable, Comparable<GenericEntity>, Cloneable, Reusable {
 
     public static final String module = GenericEntity.class.getName();
     public static final GenericEntity NULL_ENTITY = new NullGenericEntity();
     public static final NullField NULL_FIELD = new NullField();
-
-    // Do not restore observers during deserialization. Instead, client code must add observers.
-    private transient Observable observable = new Observable();
 
     /** Name of the GenericDelegator, used to re-get the GenericDelegator when deserialized */
     private String delegatorName = null;
 
     /** Reference to an instance of GenericDelegator used to do some basic operations on this entity value. If null various methods in this class will fail. This is automatically set by the GenericDelegator for all GenericValue objects instantiated through it. You may set this manually for objects you instantiate manually, but it is optional. */
     private transient Delegator internalDelegator = null;
-
-    /** A Map containing the original field values from the database.
-     */
-    private Map<String, Object> originalDbValues = null;
 
     /** Contains the fields for this entity. Note that this should always be a
      *  HashMap to allow for two things: non-synchronized reads (synchronized
@@ -159,13 +149,6 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         }
     }
 
-    private Observable getObservable() {
-        if (this.observable == null) {
-            this.observable = new Observable();
-        }
-        return this.observable;
-    }
-
     /** Creates new GenericEntity */
     protected void init(ModelEntity modelEntity) {
         assertIsMutable();
@@ -174,7 +157,6 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         }
         this.modelEntity = modelEntity;
         this.entityName = modelEntity.getEntityName();
-        this.observable = new Observable();
 
         // check some things
         if (this.entityName == null) {
@@ -192,7 +174,6 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         this.entityName = modelEntity.getEntityName();
         this.delegatorName = delegator.getDelegatorName();
         this.internalDelegator = delegator;
-        this.observable = new Observable();
         setFields(fields);
 
         // check some things
@@ -214,7 +195,6 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         this.entityName = modelEntity.getEntityName();
         this.delegatorName = delegator.getDelegatorName();
         this.internalDelegator = delegator;
-        this.observable = new Observable();
         set(modelEntity.getOnlyPk().getName(), singlePkValue);
 
         // check some things
@@ -236,7 +216,6 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         if (value.fields != null) this.fields.putAll(value.fields);
         this.delegatorName = value.delegatorName;
         this.internalDelegator = value.internalDelegator;
-        this.observable = new Observable(value.observable);
     }
 
     public void reset() {
@@ -244,15 +223,13 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         // from GenericEntity
         this.delegatorName = null;
         this.internalDelegator = null;
-        this.originalDbValues = null;
-        this.fields = new HashMap<String, Object>();
+        this.fields = FastMap.newInstance();
         this.entityName = null;
         this.modelEntity = null;
         this.generateHashCode = true;
         this.cachedHashCode = 0;
         this.mutable = true;
         this.isFromEntitySync = false;
-        this.observable = new Observable();
     }
 
     public void refreshFromValue(GenericEntity newValue) throws GenericEntityException {
@@ -269,7 +246,6 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         this.setDelegator(newValue.getDelegator());
         this.generateHashCode = newValue.generateHashCode;
         this.cachedHashCode = newValue.cachedHashCode;
-        this.observable = new Observable(newValue.observable);
     }
 
     /**
@@ -287,7 +263,6 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
      */
     public void synchronizedWithDatasource() {
         assertIsMutable();
-        this.originalDbValues = Collections.unmodifiableMap(getAllFields());
         this.clearChanged();
     }
 
@@ -438,7 +413,7 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
      * @param value The value to set
      * @param setIfNull Specifies whether or not to set the value if it is null
      */
-    public Object set(String name, Object value, boolean setIfNull) {
+    public synchronized Object set(String name, Object value, boolean setIfNull) {
         assertIsMutable();
         ModelField modelField = getModelEntity().getField(name);
         if (modelField == null) {
@@ -674,8 +649,14 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
     }
 
     public String getString(String name) {
+        // might be nice to add some ClassCastException handling... and auto conversion? hmmm...
         Object object = get(name);
-        return object == null ? null : object.toString();
+        if (object == null) return null;
+        if (object instanceof java.lang.String) {
+            return (String) object;
+        } else {
+            return object.toString();
+        }
     }
 
     public java.sql.Timestamp getTimestamp(String name) {
@@ -706,9 +687,10 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         // this "hack" is needed for now until the Double/BigDecimal issues are all resolved
         Object value = get(name);
         if (value instanceof BigDecimal) {
-            return new Double(((BigDecimal) value).doubleValue());
+            return Double.valueOf(((BigDecimal) value).doubleValue());
+        } else {
+            return (Double) value;
         }
-        return (Double) value;
     }
 
     public BigDecimal getBigDecimal(String name) {
@@ -716,9 +698,10 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         // NOTE: for things to generally work properly BigDecimal should really be used as the java-type in the field type def XML files
         Object value = get(name);
         if (value instanceof Double) {
-            return new BigDecimal(((Double) value).doubleValue());
+            return BigDecimal.valueOf(((Double) value).doubleValue());
+        } else {
+            return (BigDecimal) value;
         }
-        return (BigDecimal) value;
     }
 
     @SuppressWarnings("deprecation")
@@ -864,7 +847,7 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         if (modelEntity instanceof ModelViewEntity){
             // retrieve pkNames of realEntity
             ModelViewEntity modelViewEntity = (ModelViewEntity) modelEntity;
-            List<String> pkNamesToUse = new LinkedList<String>();
+            List<String> pkNamesToUse = FastList.newInstance();
             // iterate on realEntity for pkField
             Iterator<ModelField> iter = modelEntityToUse.getPksIterator();
             while (iter != null && iter.hasNext()) {
@@ -913,7 +896,7 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
     }
 
     public GenericPK getPrimaryKey() {
-        Collection<String> pkNames = new LinkedList<String>();
+        Collection<String> pkNames = FastList.newInstance();
         Iterator<ModelField> iter = this.getModelEntity().getPksIterator();
         while (iter != null && iter.hasNext()) {
             ModelField curField = iter.next();
@@ -1024,7 +1007,7 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
      */
     public Map<String, Object> getFields(Collection<String> keysofFields) {
         if (keysofFields == null) return null;
-        Map<String, Object> aMap = new HashMap<String, Object>();
+        Map<String, Object> aMap = FastMap.newInstance();
 
         for (String aKey: keysofFields) {
             aMap.put(aKey, this.fields.get(aKey));
@@ -1149,7 +1132,7 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         writer.print(this.getEntityName());
 
         // write attributes immediately and if a CDATA element is needed, put those in a Map for now
-        Map<String, String> cdataMap = new HashMap<String, String>();
+        Map<String, String> cdataMap = FastMap.newInstance();
 
         Iterator<ModelField> modelFields = this.getModelEntity().getFieldsIterator();
         while (modelFields.hasNext()) {
@@ -1333,13 +1316,9 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
         for (String curKey: new TreeSet<String>(fields.keySet())) {
             Object curValue = fields.get(curKey);
             ModelField field = this.getModelEntity().getField(curKey);
-            if (field.getEncrypt() && curValue instanceof String) {
+            if (field.getEncrypt()) {
                 String encryptField = (String) curValue;
-                // the encryptField may not actually be UTF8, it could be any
-                // random encoding; just treat it as a series of raw bytes.
-                // This won't give the same output as the value stored in the
-                // database, but should be good enough for printing
-                curValue = HashCrypt.cryptBytes(null, null, encryptField.getBytes());
+                curValue = HashCrypt.getDigestHash(encryptField);
             }
             theString.append('[');
             theString.append(curKey);
@@ -1497,107 +1476,6 @@ public class GenericEntity implements Map<String, Object>, LocalizedMap<Object>,
 
     public boolean matches(EntityCondition condition) {
         return condition.entityMatches(this);
-    }
-
-    public void addObserver(Observer observer) {
-        getObservable().addObserver(observer);
-    }
-
-    public void clearChanged() {
-        getObservable().clearChanged();
-    }
-
-    public void deleteObserver(Observer observer) {
-        getObservable().deleteObserver(observer);
-    }
-
-    public void deleteObservers() {
-        getObservable().deleteObservers();
-    }
-
-    public boolean hasChanged() {
-        return getObservable().hasChanged();
-    }
-
-    public void notifyObservers() {
-        getObservable().notifyObservers();
-    }
-
-    public void notifyObservers(Object arg) {
-        getObservable().notifyObservers(arg);
-    }
-
-    public void setChanged() {
-        getObservable().setChanged();
-    }
-
-    public boolean originalDbValuesAvailable() {
-        return this.originalDbValues != null ? true : false;
-    }
-
-    public Object getOriginalDbValue(String name) {
-        if (getModelEntity().getField(name) == null) {
-            throw new IllegalArgumentException("[GenericEntity.get] \"" + name + "\" is not a field of " + getEntityName());
-        }
-        if (originalDbValues == null) return null;
-        return originalDbValues.get(name);
-    }
-
-    /**
-     * Checks to see if all foreign key records exist in the database. Will create a dummy value for
-     * those missing when specified.
-     *
-     * @param insertDummy Create a dummy record using the provided fields
-     * @return true if all FKs exist (or when all missing are created)
-     * @throws GenericEntityException
-     */
-    public boolean checkFks(boolean insertDummy) throws GenericEntityException {
-        ModelEntity model = this.getModelEntity();
-        Iterator<ModelRelation> relItr = model.getRelationsIterator();
-        while (relItr.hasNext()) {
-            ModelRelation relation = relItr.next();
-            if ("one".equalsIgnoreCase(relation.getType())) {
-                // see if the related value exists
-                Map<String, Object> fields = new HashMap<String, Object>();
-                for (ModelKeyMap keyMap : relation.getKeyMaps()) {
-                    fields.put(keyMap.getRelFieldName(), this.get(keyMap.getFieldName()));
-                }
-                EntityFieldMap ecl = EntityCondition.makeCondition(fields);
-                long count = this.getDelegator().findCountByCondition(relation.getRelEntityName(), ecl, null, null);
-                if (count == 0) {
-                    if (insertDummy) {
-                        // create the new related value (dummy)
-                        GenericValue newValue = this.getDelegator().makeValue(relation.getRelEntityName());
-                        boolean allFieldsSet = true;
-                        for (ModelKeyMap mkm : relation.getKeyMaps()) {
-                            if (this.get(mkm.getFieldName()) != null) {
-                                newValue.set(mkm.getRelFieldName(), this.get(mkm.getFieldName()));
-                                if (Debug.infoOn()) Debug.logInfo("Set [" + mkm.getRelFieldName() + "] to - " + this.get(mkm.getFieldName()), module);
-                            } else {
-                                allFieldsSet = false;
-                            }
-                        }
-                        if (allFieldsSet) {
-                            if (Debug.infoOn()) Debug.logInfo("Creating place holder value : " + newValue, module);
-
-                            // inherit create and update times from this value in order to make this not seem like new/fresh data
-                            newValue.put(ModelEntity.CREATE_STAMP_FIELD, this.get(ModelEntity.CREATE_STAMP_FIELD));
-                            newValue.put(ModelEntity.CREATE_STAMP_TX_FIELD, this.get(ModelEntity.CREATE_STAMP_TX_FIELD));
-                            newValue.put(ModelEntity.STAMP_FIELD, this.get(ModelEntity.STAMP_FIELD));
-                            newValue.put(ModelEntity.STAMP_TX_FIELD, this.get(ModelEntity.STAMP_TX_FIELD));
-                            // set isFromEntitySync so that create/update stamp fields set above will be preserved
-                            newValue.setIsFromEntitySync(true);
-                            // check the FKs for the newly created entity
-                            newValue.checkFks(true);
-                            newValue.create();
-                        }
-                    } else {
-                        return false;
-                    }
-                }
-            }
-        }
-        return true;
     }
 
     public static interface NULL {
